Make sure they only center on mobile.

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -808,11 +808,14 @@ ul.pills {
 	justify-content: left;
 	flex-wrap: wrap;
 
-	@media (max-width: 1200px) {
+	@media (max-width: 768px) {
 		justify-content: center;
+		flex-direction: column;
+		align-items: center;
 	}
 
 	li {
+
 		padding: 0.7rem 0.8rem;
 		border-radius: 2rem;
 		color: white;
@@ -820,10 +823,9 @@ ul.pills {
 		text-transform: uppercase;
 		font-weight: 700;
 		font-size: 0.9rem;
-
 		background: var(--alt);
-
 		transition: filter 0.7s ease-in-out;
+		width: fit-content;
 
 		&:hover {
 			filter: brightness(120%);
